--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Microverse test</title>
     </head>
     <body>
-        <div>Hello World!</div>
+        <div>Hello World, we are software developers!</div>
     </body>
 </html>
